--- a/index.html
+++ b/index.html
@@ -1,91 +1,176 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
+<html>
+<head lang="en">
     <meta charset="UTF-8">
-    <title>购物车宣传页66</title>
-    <link rel="stylesheet" href="css/jquery.fullpage.css">
-    <link rel="stylesheet" href="css/index.css">
+    <title>购物车案例</title>
+    <link rel="stylesheet" href="css/jquery.fullpage.min.css"/>
+    <link rel="stylesheet" href="css/index.css"/>
 </head>
 <body>
 <!--公用的东西-->
 <!--进入购物中心-->
-<a class="go" href="#"><img src="images/00-go.png" alt=""></a>
+<a class="go" href="#"><img src="images/00-go.png" alt=""/></a>
 <!--更多精彩-->
-<a class="more" href="#"><img src="images/00-more.png" alt=""></a>
+<a class="more" href="#"><img src="images/00-more.png" alt=""/></a>
 <div class="container">
-    <!--
-    功能：
-    2.显示指示器 点元素
-    3.三个上下跳动的动画
-    4.页面背景设置
-    -->
+    <!-- 第一屏内容-->
     <div class="section">
         <div class="screen01">
-            <div class="text"><img src="images/01-fly.png" alt=""></div>
-            <div class="sofa"><img src="images/01-sofa.png" alt=""></div>
-            <div class="goods"><img src="images/01-goods.png" alt=""></div>
+            <div class="text"><img src="images/01-fly.png" alt=""/></div>
+            <div class="sofa"><img src="images/01-sofa.png" alt=""/></div>
+            <div class="goods"><img src="images/01-goods.png" alt=""/></div>
         </div>
     </div>
+    <!-- 第二屏内容-->
     <div class="section">
         <div class="screen02">
-            <!--文字-->
-            <div class="text"><img src="images/02-text.png" alt=""></div>
-            <!--搜索  （搜索框 关键字）-->
+            <!-- 文字-->
+            <div class="text"><img src="images/02-text.png" alt=""/></div>
+            <!-- 搜索框 -->
             <div class="searchBox">
-                <img class="search" src="images/02-search.png" alt="">
-                <img class="key" src="images/02-key.png" alt="">
+                <img class="search" src="images/02-search.png" alt=""/>
+                <img class="key" src="images/02-key.png" alt=""/>
             </div>
-            <!--商品列表  商品 单个沙发-->
+            <!-- 商品列表-->
             <div class="list">
-                <img class="goods" src="images/02-goods.png" alt="">
+                <img class="goods" src="images/02-goods.png" alt=""/>
             </div>
-            <img class="sofa" src="images/02-sofa.png" alt="">
+            <!-- 单个商品  沙发-->
+            <img class="sofa" src="images/02-sofa.png" alt=""/>
         </div>
     </div>
+    <!-- 第三屏内容-->
     <div class="section">
         <div class="screen03">
+            <!-- 选项框-->
             <div class="change">
-                <img src="images/03-change01.gif" alt="">
-                <img src="images/03-change02.gif" alt="">
+                <img src="images/03-change01.gif" alt=""/>
+                <img src="images/03-change02.gif" alt=""/>
             </div>
+            <!-- 加入购物车按钮-->
             <div class="cart">
-                <img src="images/03-cart01.gif" alt="">
-                <img src="images/03-cart02.gif" alt="">
+                <img src="images/03-cart01.gif" alt=""/>
+                <img src="images/03-cart02.gif" alt=""/>
             </div>
-            <!--沙发-->
-            <img class="sofa" src="images/02-sofa.png" alt="">
-            <img class="skewSofa" src="images/04-sofa.png" alt="">
+            <!-- 沙发-->
+            <img class="sofa" src="images/02-sofa.png" alt=""/>
+            <img class="skewSofa" src="images/04-sofa.png" alt=""/>
         </div>
     </div>
-    <!-- active 默认显示 -->
+    <!-- 第四屏内容-->
     <div class="section">
         <div class="screen04">
-            <!--云-->
-            <div class="cloud"><img src="images/04-cloud.png" alt=""></div>
-            <!--文字-->
+            <!-- 云-->
+            <div class="cloud"><img src="images/04-cloud.png" alt=""/></div>
+            <!-- 文字-->
             <div class="text">
-                <img src="images/04-text01.png" alt="">
-                <img src="images/04-text02.png" alt="">
+                <img src="images/04-text01.png" alt=""/>
+                <img src="images/04-text02.png" alt=""/>
             </div>
-            <!--购物车-->
+            <!-- 购物车-->
             <div class="cart">
-                <img class="cartImg" src="images/04-cart.png" alt="">
-                <img class="sofaImg" src="images/04-sofa.png" alt="">
+                <img class="cartImg" src="images/04-cart.png" alt=""/>
+                <img class="sofaImg" src="images/04-sofa.png" alt=""/>
             </div>
-            <!--地址-->
+            <!-- 地址-->
             <div class="address">
-                <img src="images/04-address01.png" alt="">
-                <img class="addressImg" src="images/04-address02.png" alt="">
+                <img src="images/04-address01.png" alt=""/>
+                <img class="addressImg" src="images/04-address02.png" alt=""/>
             </div>
         </div>
     </div>
-    <div class="section"></div>
-    <div class="section"></div>
-    <div class="section"></div>
-    <div class="section"></div>
+    <!-- 第五屏内容-->
+    <div class="section">
+        <div class="screen05">
+            <!-- 文字-->
+            <div class="text"><img src="images/05-text.png" alt=""/></div>
+            <!-- 银行卡-->
+            <div class="card">
+                <img class="cardImg" src="images/05-card.png" alt=""/>
+                <img class="orderImg" src="images/05-order.png" alt=""/>
+            </div>
+            <!-- 沙发-->
+            <div class="sofa">
+                <img src="images/04-sofa.png" alt=""/>
+            </div>
+            <!-- 右侧鼠标和手-->
+            <div class="mouse">
+                <img class="mouse01Img" src="images/05-mouse01.png" alt=""/>
+                <img class="mouse02Img" src="images/05-mouse02.png" alt=""/>
+                <img class="handImg" src="images/05-hand.png" alt=""/>
+            </div>
+        </div>
+    </div>
+    <!-- 第六屏内容-->
+    <div class="section">
+        <div class="screen06">
+            <!-- 白云-->
+            <div class="cloud">
+                <img class="cloud01Img" src="images/06-cloud01.png" alt=""/>
+                <img class="cloud02Img" src="images/06-cloud02.png" alt=""/>
+            </div>
+            <!-- 文字-->
+            <div class="text">
+                <img class="text01Img" src="images/06-text01.png" alt=""/>
+                <img class="text02Img" src="images/06-text02.png" alt=""/>
+            </div>
+            <!-- 包裹-->
+            <div class="box">
+                <img src="images/06-box.png" alt=""/>
+            </div>
+            <!-- 汽车-->
+            <div class="car">
+                <img class="carImg" src="images/06-car.png" alt=""/>
+                <img class="buyerImg" src="images/06-buyer.png" alt=""/>
+                <img class="addressImg" src="images/06-address.png" alt=""/>
+                <img class="workerImg" src="images/06-worker.png" alt=""/>
+                <img class="sayImg" src="images/06-say.png" alt=""/>
+            </div>
+            <!-- 收货人和门-->
+            <div class="person">
+                <img class="personImg" src="images/06-person.png" alt=""/>
+                <img class="doorImg" src="images/06-door.png" alt=""/>
+            </div>
+        </div>
+    </div>
+    <!-- 第七屏内容-->
+    <div class="section">
+        <div class="screen07">
+            <!-- 星星-->
+            <div class="start">
+                <img src="images/07-star.png" alt=""/>
+                <img src="images/07-star.png" alt=""/>
+                <img src="images/07-star.png" alt=""/>
+                <img src="images/07-star.png" alt=""/>
+                <img src="images/07-star.png" alt=""/>
+            </div>
+            <!-- 好评文字-->
+            <div class="text">
+                <img src="images/07-text.png" alt=""/>
+            </div>
+        </div>
+    </div>
+    <!-- 第八屏内容-->
+    <div class="section">
+        <div class="screen08">
+            <!-- 开始购物按钮-->
+            <div class="btn">
+                <img src="images/08-btn01.png" alt=""/>
+                <img class="btn02Img" src="images/08-btn02.gif" alt=""/>
+            </div>
+            <!-- 再来一次-->
+            <div class="again">
+                <img src="images/08-again.png" alt=""/>
+            </div>
+            <!-- 手-->
+            <div class="hand">
+                <img src="images/08-hand.png" alt=""/>
+            </div>
+        </div>
+    </div>
 </div>
-<script src="js/jquery.min.js"></script>
-<script src="js/jquery.fullpage.js"></script>
+<script src="js/jquery-1.12.2.min.js"></script>
+<script src="js/jquery.fullpage.min.js"></script>
 <script src="js/index.js"></script>
 </body>
 </html>
