--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title>car</title>
+    <title>购物车</title>
     <link rel="stylesheet" href="css/jquery.fullpage.min.css"/>
     <link rel="stylesheet" href="css/index.css"/>
 </head>
